dark mode + fixes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,38 @@
+@use '@angular/material' as mat;
+
+@include mat.core();
+
+$project-primary-light: mat.define-palette(mat.$cyan-palette);
+$project-accent-light: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$project-warn-light: mat.define-palette(mat.$red-palette);
+
+$project-primary-dark: mat.define-palette(mat.$teal-palette);
+$project-accent-dark: mat.define-palette(mat.$teal-palette, A200, A100, A400);
+$project-warn-dark: mat.define-palette(mat.$red-palette);
+
+$project-theme-light: mat.define-light-theme((
+        color: (
+                primary: $project-primary-light,
+                accent: $project-accent-light,
+                warn: $project-warn-light,
+        )
+));
+
+$project-theme-dark: mat.define-dark-theme((
+        color: (
+                primary: $project-primary-dark,
+                accent: $project-accent-dark,
+                warn: $project-warn-dark,
+        )
+));
+
+.theme-dark {
+  @include mat.all-component-themes($project-theme-dark);
+}
+.theme-light {
+  @include mat.all-component-themes($project-theme-light);
+}
+
 html, body {
   height: 100%;
   box-sizing: border-box;
@@ -12,7 +47,6 @@ body {
 }
 
 .header {
-  padding-left: 40px;
   position: absolute;
   top: 0;
   height: 100px;
@@ -37,6 +71,10 @@ body {
   left: 0;
   right: 0;
   overflow: hidden;
+}
+
+.horizontal-spacer {
+  flex: 1 1 auto;
 }
 
 .padding-5px {
@@ -69,4 +107,13 @@ body {
 
 .font-16px {
   font-size: 16px;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
